fix: order service tests to match user flow